--- a/portfolio.html
+++ b/portfolio.html
@@ -48,9 +48,9 @@
         
         <section class="section potfolio">
             <div class="container">
-                <h1 hidden>Портфолио</h1>
+                <h1 class="visually-hidden">Портфолио</h1>
                 <!-- Фильтр -->
-                <h2 hidden >Фильтр</h2>
+                <h2 class="visually-hidden" >Фильтр</h2>
                     <ul class="filters-list list">
                         <li class="item"><button type="button"  class="button primary">Все</button></li>
                         <li class="item"><button type="button"  class="button primary">Веб-сайты</button></li>
@@ -59,7 +59,7 @@
                         <li class="item"><button type="button"  class="button primary">Маркетинг</button></li>
                     </ul>
                 <!--Деятельность-->       
-                <h2 hidden class="activities-title">Направления деятельности</h2>
+                <h2 class="activities-title visually-hidden">Направления деятельности</h2>
                     <ul class="activities-list list">
                     <li class="activities-item">
                         <a class="activities-item-link">
