--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
                         placeholder="Введите текст"
                         ></textarea>                        
                     </div>
-                    <div>
+                    <div class="modal-checkbox-text-content">
                         <input type="checkbox" 
                         name="modal-checkbox" 
                         class="modal-checkbox visually-hidden" required 
@@ -421,7 +421,8 @@
                         <span><svg class="modal-checkbox-icon" width="16" height="15">
                             <use href="./images/icons.svg#icon-check"></use>
                             </svg>
-                        </span>Соглашаюсь с рассылкой и принимаю Условия договора</label>
+                        </span>Соглашаюсь с рассылкой и принимаю</label>
+                        <a href="" class="modal-checkbox-link">Условия договора</a>
                     </div>
                     <button type="submit" class="modal-submit">Отправить</button>
                 </form>
