--- a/index.html
+++ b/index.html
@@ -421,8 +421,8 @@
                         <span><svg class="modal-checkbox-icon" width="16" height="15">
                             <use href="./images/icons.svg#icon-check"></use>
                             </svg>
-                        </span>Соглашаюсь с рассылкой и принимаю<a href="" class="modal-checkbox-link">Условия договора</a></label>
-                        
+                        </span>Соглашаюсь с рассылкой и принимаю</label>
+                        <a href="" class="modal-checkbox-link">Условия договора</a>
                     </div>
                     <button type="submit" class="modal-submit">Отправить</button>
                 </form>
